# InteinFinder

./: .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .ocamlformat  1000.fa  Gemfile  HACKING.md  InteinFinder.opam  InteinFinder.opam.locked  LICENSE-MIT.txt  LICENSE.txt  Makefile  README.md  dune-project  find_inteins.rb  intein_finder  intein_finder.opam  intein_finder.opam.locked  justfile
.github/workflows/: build_and_test.yml  build_and_test_static.yml  generate_docs.yml
_assets/: README.md
_assets/cddb/: COG1403.smp  TIGR01445.smp  cd09643.smp  pfam05204.smp  pfam05551.smp  pfam07510.smp  pfam12639.smp  (+6 more)
_docs_src/: mkdocs.yml
_examples/: README.md
docs/: 404.html  index.html  search.html  sitemap.xml
lib/: alignment.ml  bio_io_ext.ml  btab_record.ml  clean_up.ml  config.ml  const.rb  coord.ml  dir.ml  dune  filter_and_rename_queries.ml  filter_and_rename_queries.mli  hits.ml  intein_finder.rb  logging.ml  methods.rb  mmseqs_search.ml  out_file_name.ml  region.ml  remove_inteins.ml  rename_btab_queries.ml  rpsblast.ml  run.ml  search_summary.ml  smp_files.ml  split_seqs.ml  tier.ml  tier.mli  utils.ml  zero_indexed_int.ml  zero_indexed_int.mli
spec/: bitmask_spec.rb  intein_finder_spec.rb  lib_helper.rb  spec_constants.rb
src/: const.h  err_codes.h  kseq_helper.c  kseq_helper.h  process_input_seqs.c  simple_headers.c  split_seqs.c
test_files/: 2000.fa  all.unaln.fasta  btab.txt  long_and_short.faa  no_inteins.faa  rnr.faa  rnr.simple_headers.faa.split_0  rnr.simple_headers.name_map.txt  rnr_5.faa  rnr_seq_4.faa  simple_headers_in.simple_headers.fa  simple_headers_name_map_expected.txt  small_2.faa  snazzy_proteins.simple_headers.faa  snazzy_proteins.simple_headers.faa.split_0  snazzy_proteins.simple_headers.faa.split_1  snazzy_proteins.simple_headers.name_map.txt  split_seqs_in.fa.split_1  split_seqs_split_0_expected.txt  test_expected.txt  test_small2_expected.txt  test_small_expected.txt
(+160 files in other folders)
